--- a/public/lib/lib_awesomplete/awesomplete.css
+++ b/public/lib/lib_awesomplete/awesomplete.css
@@ -36,7 +36,7 @@
 .awesomplete > ul {
 	border-radius: .3em;
 	margin: .2em 0 0;
-	background: hsla(0,0%,100%,.9);
+	background: rgba(255, 255, 255, 0.9);
 	background: linear-gradient(to bottom right, white, hsla(0,0%,100%,.8));
 	border: 1px solid rgba(0,0,0,.3);
 	box-shadow: .05em .2em .6em rgba(0,0,0,.2);
@@ -91,11 +91,13 @@
 	}
 	
 		.awesomplete mark {
-			background: hsl(65, 100%, 50%);
+			border-radius: .2em; /* AGREGUE UN BORDE SUAVE A LAS BUSQUEDAS */
+			background: hsl(0, 100%, 71%);
 		}
 		
 		.awesomplete li:hover mark {
-			background: hsl(68, 100%, 41%);
+			border-radius: .2em; /* AGREGUE UN BORDE SUAVE A LAS BUSQUEDAS */
+			background: hsl(0, 100%, 71%);
 		}
 		
 		.awesomplete li[aria-selected="true"] mark {
