--- a/views/formInfoCliente.pug
+++ b/views/formInfoCliente.pug
@@ -67,7 +67,26 @@ prepend area-scripts
         });
       // === === ESTILOS === ===
         $('#dtHistorialCliente').DataTable({
-          "scrollX": true
+          "scrollX": true,
+          "lengthChange": false, // Mostrar numero de entradas
+          "order": [[ 0, "desc" ]],
+          "columns": [
+              null,
+              null,
+              {
+                "render": function(data, type, row){
+                return data.split("+").join("<br/>");
+                }
+              },
+              null,
+              null,
+              null,
+              {
+                "render": function(data, type, row){
+                return data.split("+").join("<br/>");
+                }
+              }
+          ]
         });
 
 
@@ -581,8 +600,8 @@ block contenido
                         //th.th-sm Placa
                         //th.th-sm Marca
                         th.th-sm Km Inicial
-                        th.th-sm Servicio
-                        th.th-sm Detalle de Cliente
+                        th.th-sm Requerimiento (obs cliente)
+                        //th.th-sm Detalle de Cliente
                         th.th-sm Detalle de Recepcion
                         //th.th-sm Nombre Usuario
                         th.th-sm Antiguedad de Visita
@@ -598,8 +617,14 @@ block contenido
                           //-  input(id='id_vehiculo_'+i type="hidden" value= 'data.historial_servicios[i].id_vehiculo') 
                           //-//td #{data.historial_servicios[i].vehiculo_marca}
                           td #{data.info_servicios.historial_servicios[i].km_inicial} km
-                          td #{data.info_servicios.historial_servicios[i].nombre_servicio}
-                          td #{data.info_servicios.historial_servicios[i].descripcion_cliente}
+
+                          td
+                            //.d-flex.justify-content-start
+                            .d-flex.flex-column.bd-highlight
+                              .bd-highlight.font-weight-bold #{data.info_servicios.historial_servicios[i].nombre_servicio}
+                              .bd-highlight.text-primary.font-weight-bold "#{data.info_servicios.historial_servicios[i].descripcion_cliente}"
+                              //strong.text-body #{data.info_servicios.historial_servicios[i].nombre_servicio}+strong.text-primary.ml-1 "#{data.info_servicios.historial_servicios[i].descripcion_cliente}"
+                              //strong.text-primary.ml-1 "#{data.info_servicios.historial_servicios[i].descripcion_cliente}"
                           td #{data.info_servicios.historial_servicios[i].Detalle_usuario}
                           //td #{data.historial_servicios[i].nombre_cliente}
                           td #{data.info_servicios.Tiempo_Inicio[i]}
@@ -615,8 +640,8 @@ block contenido
                         //th Placa
                         //th Marca
                         th Km Inicial
-                        th Servicio
-                        th Detalle de Cliente
+                        th Requerimiento (obs cliente)
+                        //th Detalle de Cliente
                         th Detalle de Recepcion
                         //th Nombre Usuario
                         th Antiguedad de Visita
